# stock-screening-dashboard

./: .flake8  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  app.py  pyproject.toml  style.css
.github/workflows/: main.yml
src/: dashboard.py  extract.py  plots.py  utils.py
